--- a/src/scss/blocks/_features.scss
+++ b/src/scss/blocks/_features.scss
@@ -7,6 +7,11 @@
     margin-bottom: $margin-md;
     text-align: center;
 
+    @include responsive(tablet) {
+      text-align: left;
+      padding-right: 4rem;
+    }
+
     .image-container {
       background-color: $color-button-primary-normal;
       width: 4.1rem;
@@ -23,6 +28,11 @@
       padding-left: clamp(1em, 1.5em + 4vw, 2em);
       padding-right: clamp(1em, 1.5em + 4vw, 2em);
       margin-bottom: 1.5rem;
+
+      @include responsive(tablet) {
+        padding-left: 0;
+        padding-right: 3.5rem;
+      }
     }
 
     p {
