--- a/src/scss/blocks/_main-content.scss
+++ b/src/scss/blocks/_main-content.scss
@@ -6,6 +6,7 @@
 
   @include responsive(tablet) {
     margin-left: $margin-sm;
+    margin-bottom: 0;
   }
 
   .wrapper {
@@ -77,10 +78,11 @@
     border-top-right-radius: 1.25rem;
     border-bottom-right-radius: 1.25rem;
     margin-left: -1rem;
-    // @include responsive(tablet) {
-    //   height: 20rem;
-    //   width: 80%;
-    // }
+
+    @include responsive(tablet) {
+      border-top-left-radius: 1.25rem;
+      border-bottom-left-radius: 1.25rem;
+    }
 
     img {
       height: 12.1rem;
@@ -93,6 +95,8 @@
 
       @include responsive(tablet) {
         height: 20rem;
+        border-top-left-radius: 1.25rem;
+        border-bottom-left-radius: 1.25rem;
       }
     }
   }
@@ -125,14 +129,16 @@
       padding-right: 0;
       margin-top: 4.5rem;
       margin-bottom: 8.9rem;
+      text-align: left;
     }
 
     h2 {
       text-transform: uppercase;
       color: $color-headings;
+
       @include responsive(tablet) {
         padding-left: 0;
-        margin-right: 2.25rem;
+        margin-right: 4rem;
         font-size: 2rem;
       }
     }
