--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -2,6 +2,7 @@
 @use './blocks/global';
 @use './blocks/header';
 @use './blocks/main-content';
+@use './blocks/gallery';
+@use './blocks/product-description';
 @use './blocks/features';
 @use './blocks/footer';
-@use './utilities/layout';
