--- a/src/scss/blocks/_features.scss
+++ b/src/scss/blocks/_features.scss
@@ -2,17 +2,23 @@
 @use '../utilities/variables' as *;
 
 .features {
+  width: clamp(21rem, 85vw, 70rem);
+  outline: blue 2px solid;
+  margin-left: auto;
+  margin-right: auto;
+
   .card {
-    max-width: 21rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-bottom: $margin-md;
     text-align: center;
-
-    @include responsive(tablet) {
-      text-align: left;
-      padding-right: 4rem;
-    }
+    outline: 2px solid red;
 
     .image-container {
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
       background-color: $color-button-primary-normal;
       width: 4.1rem;
       height: 4.1rem;
@@ -28,11 +34,6 @@
       padding-left: clamp(1em, 1.5em + 4vw, 2em);
       padding-right: clamp(1em, 1.5em + 4vw, 2em);
       margin-bottom: 1.5rem;
-
-      @include responsive(tablet) {
-        padding-left: 0;
-        padding-right: 3.5rem;
-      }
     }
 
     p {
