--- a/src/scss/blocks/_main-content.scss
+++ b/src/scss/blocks/_main-content.scss
@@ -3,22 +3,27 @@
 
 .main-content {
   margin-bottom: $margin-xlg;
-
-  @include responsive(tablet) {
-    margin-left: $margin-sm;
-    margin-bottom: 0;
-  }
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 1rem;
 
   .wrapper {
-    margin-bottom: $margin-md;
-    max-width: 21rem;
+    grid-column: 1/3;
+    outline: tomato solid 2px;
+    width: clamp(21rem, 85vw, 85.1vw);
+    margin-bottom: 3rem;
 
-    @include responsive(tablet) {
-      max-width: 21.2rem;
-      margin-left: $margin-sm;
-    }
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, auto);
+    align-self: start;
+    justify-items: start;
+    @include centre;
 
     h1 {
+      grid-column: 1/3;
+      grid-row: 1/2;
       font-weight: 900;
       line-height: 1;
       text-transform: uppercase;
@@ -26,6 +31,8 @@
     }
 
     p {
+      grid-column: 1/3;
+      grid-row: 2/3;
       font-weight: 500;
       line-height: 1.6;
       color: $color-text;
@@ -33,13 +40,11 @@
     }
 
     .order-link-body {
+      grid-column: 1/2;
+      grid-row: 3/4;
       @include orderButton;
       background-color: $color-button-primary-normal;
       color: $color-light;
-
-      @include responsive(tablet) {
-        display: inline-block;
-      }
 
       &:hover,
       &:active {
@@ -54,98 +59,13 @@
     }
 
     span {
+      grid-column: 2/3;
+      align-self: center;
+      justify-self: end;
+
       font-weight: 700;
       color: $color-text;
       text-transform: uppercase;
-      @include responsive(tablet) {
-        display: inline-block;
-      }
-    }
-  }
-
-  .keyboard {
-    margin-left: 1rem;
-
-    img {
-      border-top-left-radius: 1.25rem;
-      border-bottom-left-radius: 1.25rem;
-      height: 100%;
-    }
-  }
-
-  .keyboard-phone {
-    background-color: $color-button-primary-normal;
-    border-top-right-radius: 1.25rem;
-    border-bottom-right-radius: 1.25rem;
-    margin-left: -1rem;
-
-    @include responsive(tablet) {
-      border-top-left-radius: 1.25rem;
-      border-bottom-left-radius: 1.25rem;
-    }
-
-    img {
-      height: 12.1rem;
-      width: 100%;
-      object-fit: cover;
-      opacity: 0.75;
-      mix-blend-mode: multiply;
-      border-top-right-radius: 1.25rem;
-      border-bottom-right-radius: 1.25rem;
-
-      @include responsive(tablet) {
-        height: 20rem;
-        border-top-left-radius: 1.25rem;
-        border-bottom-left-radius: 1.25rem;
-      }
-    }
-  }
-
-  .keyboard-glass {
-    margin-right: 1.5rem;
-
-    img {
-      height: 12.1rem;
-      width: 100%;
-      object-fit: cover;
-      border-radius: 1.25rem;
-      @include responsive(tablet) {
-        height: 20rem;
-      }
-    }
-  }
-
-  .product-description {
-    text-align: center;
-    max-width: 21rem;
-    padding-left: clamp(1em, 1.5em + 4vw, 2em);
-    padding-right: clamp(1em, 1.5em + 4vw, 2em);
-    margin-top: $margin-lg;
-    margin-bottom: clamp(1.2rem, 1.4rem + 1vh, 1.7rem);
-
-    @include responsive(tablet) {
-      max-width: 43.1rem;
-      padding-left: 0;
-      padding-right: 0;
-      margin-top: 4.5rem;
-      margin-bottom: 8.9rem;
-      text-align: left;
-    }
-
-    h2 {
-      text-transform: uppercase;
-      color: $color-headings;
-
-      @include responsive(tablet) {
-        padding-left: 0;
-        margin-right: 4rem;
-        font-size: 2rem;
-      }
-    }
-
-    p {
-      color: $color-text;
-      line-height: 1.6;
     }
   }
 }
