--- a/src/scss/blocks/_features.scss
+++ b/src/scss/blocks/_features.scss
@@ -2,10 +2,10 @@
 @use '../utilities/variables' as *;
 
 .features {
-  width: clamp(21rem, 85vw, 70rem);
+  // width: clamp(21rem, 85vw, 70rem);
   outline: blue 2px solid;
-  margin-left: auto;
-  margin-right: auto;
+  // margin-left: auto;
+  // margin-right: auto;
 
   .card {
     display: flex;
@@ -14,6 +14,13 @@
     margin-bottom: $margin-md;
     text-align: center;
     outline: 2px solid red;
+
+    @include responsive(small) {
+      // flex-basis: 35vw;
+      align-items: flex-start;
+      text-align: left;
+      padding: 0;
+    }
 
     .image-container {
       display: inline-flex;
@@ -34,6 +41,10 @@
       padding-left: clamp(1em, 1.5em + 4vw, 2em);
       padding-right: clamp(1em, 1.5em + 4vw, 2em);
       margin-bottom: 1.5rem;
+
+      @include responsive(small) {
+        padding-left: 0;
+      }
     }
 
     p {
