--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -4,9 +4,9 @@
 header {
   .wrapper {
     outline: 2px solid blue;
-    width: clamp(21rem, 85vw, 70rem);
-    margin-top: 1.4rem;
-    margin-bottom: 4rem;
+    // width: clamp(21rem, 85vw, 70rem);
+    // margin-top: 1.4rem;
+    // margin-bottom: 4rem;
 
     display: flex;
     justify-content: space-between;
