--- a/src/scss/blocks/_main-content.scss
+++ b/src/scss/blocks/_main-content.scss
@@ -2,16 +2,20 @@
 @use '../utilities/variables' as *;
 
 .main-content {
-  margin-bottom: $margin-xlg;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 1rem;
+  position: relative;
+  // margin-bottom: $margin-xlg;
+  // display: flex;
+  // flex-direction: row;
+  // flex-wrap: wrap;
+  // gap: 1rem;
+
+  // @include responsive(desktop) {
+  //   justify-content: space-between;
+  // }
 
   .wrapper {
-    grid-column: 1/3;
-    outline: tomato solid 2px;
-    width: clamp(21rem, 85vw, 85.1vw);
+    outline: tomato solid 6px;
+
     margin-bottom: 3rem;
 
     display: grid;
@@ -19,7 +23,16 @@
     grid-template-rows: repeat(3, auto);
     align-self: start;
     justify-items: start;
-    @include centre;
+    // @include centre;
+
+    // @include responsive(medium) {
+    //   flex-basis: 42vw;
+    //   align-self: center;
+    // }
+
+    // @include responsive(desktop) {
+    //   flex-basis: 55%;
+    // }
 
     h1 {
       grid-column: 1/3;
