--- a/src/scss/utilities/_mixins.scss
+++ b/src/scss/utilities/_mixins.scss
@@ -24,14 +24,20 @@
 }
 
 @mixin responsive($breakpoint) {
-  @if $breakpoint == tablet {
+  @if $breakpoint == small {
+    @media (min-width: 450px) {
+      @content;
+    }
+  }
+
+  @if $breakpoint == medium {
     @media (min-width: 600px) {
       @content;
     }
   }
 
-  @if $breakpoint == desktop {
-    @media (min-width: 800px) {
+  @if $breakpoint == lg {
+    @media (min-width: 1000px) {
       @content;
     }
   }
