--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -3,7 +3,7 @@
 
 header {
   .wrapper {
-    outline: 2px solid blue;
+    // outline: 2px solid blue;
     // width: clamp(21rem, 85vw, 70rem);
     // margin-top: 1.4rem;
     // margin-bottom: 4rem;
