--- a/src/scss/blocks/_site.scss
+++ b/src/scss/blocks/_site.scss
@@ -5,23 +5,23 @@ body {
   display: grid;
   place-content: center;
 
-  @include responsive(desktop) {
+  @include responsive(xl) {
     .bg-right {
-      width: 7rem;
-      height: 120px;
-      background-color: hotpink;
+      width: 8rem;
+      height: 15rem;
+      background-color: $color-button-secondary-normal;
       position: absolute;
-      top: 8.4rem;
+      top: 11.52rem;
       right: -2rem;
       border-radius: 1.25rem;
     }
 
     .bg-left {
-      width: 7rem;
-      height: 120px;
-      background-color: hotpink;
+      width: 8rem;
+      height: 15rem;
+      background-color: $color-button-secondary-normal;
       position: absolute;
-      top: 57.2rem;
+      top: 55.45rem;
       left: -2rem;
       border-radius: 1.25rem;
     }
@@ -48,6 +48,12 @@ header {
     margin-right: 5rem;
     margin-bottom: 5rem;
   }
+
+  @include responsive(xl) {
+    margin-left: 10.3rem;
+    margin-right: 10.3rem;
+    margin-bottom: 5.2rem;
+  }
 }
 
 .main-content {
@@ -70,7 +76,6 @@ header {
   .wrapper {
     grid-column: 1/3;
     grid-row: 1/2;
-
     margin-left: 1.5rem;
     margin-right: 1.5rem;
 
@@ -81,8 +86,13 @@ header {
     @include responsive(lg) {
       margin-top: 3.4rem;
       margin-left: 5rem;
-      margin-right: 7rem;
       margin-bottom: 7rem;
+      max-width: 28rem;
+    }
+
+    @include responsive(xl) {
+      margin-left: 10.3rem;
+      margin-right: 7.8rem;
     }
   }
 
@@ -102,6 +112,10 @@ header {
       grid-column: 3/5;
       margin-right: 5rem;
       border-radius: 1.25rem;
+    }
+
+    @include responsive(xl) {
+      margin-right: 10.3rem;
     }
 
     img {
@@ -146,6 +160,12 @@ header {
       grid-column: 1/2;
       height: 30rem;
       margin-left: 5rem;
+      width: 85%;
+    }
+
+    @include responsive(xl) {
+      margin-left: 10.3rem;
+      width: 80%;
     }
 
     img {
@@ -154,7 +174,6 @@ header {
       object-fit: cover;
       border-top-right-radius: 1.25rem;
       border-bottom-right-radius: 1.25rem;
-
       opacity: 0.75;
       mix-blend-mode: multiply;
 
@@ -188,6 +207,13 @@ header {
     @include responsive(lg) {
       grid-column: 2/4;
       height: 30rem;
+      width: 85%;
+    }
+
+    @include responsive(xl) {
+      grid-column: 2/4;
+      width: 78%;
+      margin-right: 5rem;
     }
 
     img {
@@ -222,24 +248,54 @@ header {
       gap: 1.2rem;
       max-width: 80%;
     }
+
+    @include responsive(lg) {
+      grid-column: 4/5;
+      grid-row: 2/3;
+      height: 30rem;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
+      gap: 0;
+      margin-top: 0;
+      margin-right: 5rem;
+    }
+
+    @include responsive(xl) {
+      margin-right: 10.3rem;
+      max-width: 16rem;
+      justify-content: center;
+    }
   }
 }
 
 .features {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
+
   @include responsive(small) {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr));
     gap: 1rem;
   }
+
+  @include responsive(lg) {
+    margin-left: 5rem;
+    margin-right: 5rem;
+  }
+
+  @include responsive(xl) {
+    grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
+    margin-left: 10.3rem;
+    margin-right: 10.3rem;
+  }
+
   .card {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-bottom: $margin-md;
     text-align: center;
-    outline: 2px solid red;
 
     @include responsive(small) {
       align-items: flex-start;
@@ -270,12 +326,19 @@ header {
       @include responsive(small) {
         padding-left: 0;
       }
+      @include responsive(xl) {
+        max-width: 19ch;
+      }
     }
 
     p {
       color: $color-text;
       line-height: 1.6;
       margin-bottom: $margin-md;
+
+      @include responsive(xl) {
+        max-width: 26ch;
+      }
     }
   }
 }
