--- a/src/scss/blocks/_global.scss
+++ b/src/scss/blocks/_global.scss
@@ -2,6 +2,9 @@
 @use '../utilities/mixins' as *;
 
 body {
+  display: grid;
+  place-content: center;
+
   overflow-x: hidden;
   font-family: $barlow;
   height: 100%;
