--- a/src/scss/blocks/_site.scss
+++ b/src/scss/blocks/_site.scss
@@ -1,29 +1,19 @@
 @use '../utilities/mixins' as *;
 @use '../utilities/variables' as *;
 
+// DECORATIVE SIDE BOXES
 body {
-  display: grid;
-  place-content: center;
-
   @include responsive(xl) {
     .bg-right {
-      width: 8rem;
-      height: 15rem;
-      background-color: $color-button-secondary-normal;
-      position: absolute;
+      @include decorativeBox;
       top: 11.52rem;
       right: -2rem;
-      border-radius: 1.25rem;
     }
 
     .bg-left {
-      width: 8rem;
-      height: 15rem;
-      background-color: $color-button-secondary-normal;
-      position: absolute;
+      @include decorativeBox;
       top: 55.45rem;
       left: -2rem;
-      border-radius: 1.25rem;
     }
   }
 }
@@ -32,313 +22,4 @@ body {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto;
-}
-
-header {
-  grid-column: 1/2;
-  grid-row: 1/2;
-  margin-top: 1.5rem;
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
-  margin-bottom: 4rem;
-
-  @include responsive(lg) {
-    margin-top: 3.4rem;
-    margin-left: 5rem;
-    margin-right: 5rem;
-    margin-bottom: 5rem;
-  }
-
-  @include responsive(xl) {
-    margin-left: 10.3rem;
-    margin-right: 10.3rem;
-    margin-bottom: 5.2rem;
-  }
-}
-
-.main-content {
-  grid-column: 1/2;
-  grid-row: 2/3;
-
-  display: grid;
-  grid-template-columns: 0.5fr 1fr;
-  grid-template-rows: auto;
-  gap: 1rem;
-
-  @include responsive(medium) {
-    grid-template-columns: 0.5fr 0.5fr 1fr;
-  }
-
-  @include responsive(lg) {
-    grid-template-columns: repeat(4, 1fr);
-  }
-
-  .wrapper {
-    grid-column: 1/3;
-    grid-row: 1/2;
-    margin-left: 1.5rem;
-    margin-right: 1.5rem;
-
-    @include responsive(medium) {
-      align-self: center;
-    }
-
-    @include responsive(lg) {
-      margin-top: 3.4rem;
-      margin-left: 5rem;
-      margin-bottom: 7rem;
-      max-width: 28rem;
-    }
-
-    @include responsive(xl) {
-      margin-left: 10.3rem;
-      margin-right: 7.8rem;
-    }
-  }
-
-  .keyboard {
-    grid-column: 1/3;
-    grid-row: 2/3;
-    margin-left: 1.5rem;
-    border-top-left-radius: 1.25rem;
-    border-bottom-left-radius: 1.25rem;
-
-    @include responsive(medium) {
-      grid-column: 3/4;
-      grid-row: 1/2;
-    }
-
-    @include responsive(lg) {
-      grid-column: 3/5;
-      margin-right: 5rem;
-      border-radius: 1.25rem;
-    }
-
-    @include responsive(xl) {
-      margin-right: 10.3rem;
-    }
-
-    img {
-      height: 20.7rem;
-      width: 100%;
-      object-fit: cover;
-      border-top-left-radius: 1.25rem;
-      border-bottom-left-radius: 1.25rem;
-
-      @include responsive(medium) {
-        height: 26.5rem;
-      }
-
-      @include responsive(lg) {
-        border-radius: 1.25rem;
-      }
-    }
-  }
-
-  .keyboard-phone {
-    grid-column: 1/2;
-    grid-row: 3/4;
-    border-top-right-radius: 1.25rem;
-    border-bottom-right-radius: 1.25rem;
-    width: 40%;
-    background-color: $color-button-primary-normal;
-
-    @include responsive(small) {
-      width: 85%;
-    }
-
-    @include responsive(medium) {
-      grid-column: 1/3;
-      grid-row: 2/3;
-      height: 20rem;
-      margin-left: 1.5rem;
-      border-radius: 1.5rem;
-      width: 70%;
-    }
-
-    @include responsive(lg) {
-      grid-column: 1/2;
-      height: 30rem;
-      margin-left: 5rem;
-      width: 85%;
-    }
-
-    @include responsive(xl) {
-      margin-left: 10.3rem;
-      width: 80%;
-    }
-
-    img {
-      height: 12rem;
-      width: 100%;
-      object-fit: cover;
-      border-top-right-radius: 1.25rem;
-      border-bottom-right-radius: 1.25rem;
-      opacity: 0.75;
-      mix-blend-mode: multiply;
-
-      @include responsive(medium) {
-        height: 20rem;
-        border-radius: 1.5rem;
-      }
-
-      @include responsive(lg) {
-        height: 30rem;
-      }
-    }
-  }
-
-  .keyboard-glass {
-    grid-column: 1/3;
-    grid-row: 3/4;
-    border-radius: 1.25rem;
-    justify-self: end;
-    margin-right: 1.5rem;
-    width: 65%;
-
-    @include responsive(medium) {
-      grid-column: 2/4;
-      grid-row: 2/3;
-      height: 20rem;
-      border-radius: 1.5rem;
-      width: 75%;
-    }
-
-    @include responsive(lg) {
-      grid-column: 2/4;
-      height: 30rem;
-      width: 85%;
-    }
-
-    @include responsive(xl) {
-      grid-column: 2/4;
-      width: 78%;
-      margin-right: 5rem;
-    }
-
-    img {
-      height: 12rem;
-      width: 100%;
-      object-fit: cover;
-      border-radius: 1.25rem;
-
-      @include responsive(medium) {
-        height: 20rem;
-      }
-
-      @include responsive(lg) {
-        height: 30rem;
-      }
-    }
-  }
-
-  .product-description {
-    grid-column: 1/3;
-    margin-left: 1.5rem;
-    margin-right: 1.5rem;
-    margin-top: 4.7rem;
-    margin-bottom: 7rem;
-
-    @include responsive(medium) {
-      grid-column: 1/4;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      text-align: left;
-      gap: 1.2rem;
-      max-width: 80%;
-    }
-
-    @include responsive(lg) {
-      grid-column: 4/5;
-      grid-row: 2/3;
-      height: 30rem;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: flex-start;
-      gap: 0;
-      margin-top: 0;
-      margin-right: 5rem;
-    }
-
-    @include responsive(xl) {
-      margin-right: 10.3rem;
-      max-width: 16rem;
-      justify-content: center;
-    }
-  }
-}
-
-.features {
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
-
-  @include responsive(small) {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr));
-    gap: 1rem;
-  }
-
-  @include responsive(lg) {
-    margin-left: 5rem;
-    margin-right: 5rem;
-  }
-
-  @include responsive(xl) {
-    grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
-    margin-left: 10.3rem;
-    margin-right: 10.3rem;
-  }
-
-  .card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: $margin-md;
-    text-align: center;
-
-    @include responsive(small) {
-      align-items: flex-start;
-      text-align: left;
-      padding: 0;
-    }
-
-    .image-container {
-      display: inline-flex;
-      justify-content: center;
-      align-items: center;
-      background-color: $color-button-primary-normal;
-      width: 4.1rem;
-      height: 4.1rem;
-      border-radius: 1rem;
-      margin-bottom: $margin-paragraph-md;
-    }
-
-    h3 {
-      font-weight: 900;
-      text-transform: uppercase;
-      font-size: 1.5rem;
-      line-height: 1.1;
-      padding-left: clamp(1em, 1.5em + 4vw, 2em);
-      padding-right: clamp(1em, 1.5em + 4vw, 2em);
-      margin-bottom: 1.5rem;
-
-      @include responsive(small) {
-        padding-left: 0;
-      }
-      @include responsive(xl) {
-        max-width: 19ch;
-      }
-    }
-
-    p {
-      color: $color-text;
-      line-height: 1.6;
-      margin-bottom: $margin-md;
-
-      @include responsive(xl) {
-        max-width: 26ch;
-      }
-    }
-  }
 }
