--- a/src/scss/blocks/_gallery.scss
+++ b/src/scss/blocks/_gallery.scss
@@ -1,91 +1,135 @@
 @use '../utilities/mixins' as *;
 @use '../utilities/variables' as *;
 
-// .keyboard {
-//   // margin-left: 1rem;
+.keyboard {
+  grid-column: 1/3;
+  grid-row: 2/3;
+  border-top-left-radius: $border-radius;
+  border-bottom-left-radius: $border-radius;
+  margin-left: 1.5rem;
 
-//   // @include responsive(medium) {
-//   //   flex-basis: 40vw;
-//   // }
+  @include responsive(medium) {
+    grid-column: 3/4;
+    grid-row: 1/2;
+  }
 
-//   // @include responsive(desktop) {
-//   //   flex-basis: 42%;
-//   //   margin-right: auto;
-//   //   border-radius: 1.25rem;
-//   // }
+  @include responsive(lg) {
+    grid-column: 3/5;
+    border-radius: $border-radius;
+    margin-right: 5rem;
+  }
 
-//   img {
-//     // border-top-left-radius: 1.25rem;
-//     // border-bottom-left-radius: 1.25rem;
-//     // height: 100%;
+  @include responsive(xl) {
+    margin-right: 10.3rem;
+  }
 
-//     // @include responsive(desktop) {
-//     //   border-radius: 1.25rem;
-//     // }
-//   }
-// }
+  img {
+    @include imgSizing;
+    height: 20.7rem;
+    border-top-left-radius: $border-radius;
+    border-bottom-left-radius: $border-radius;
 
-// .keyboard-phone {
-//   background-color: $color-button-primary-normal;
-//   border-top-right-radius: 1.25rem;
-//   border-bottom-right-radius: 1.25rem;
-//   // margin-left: -5rem;
-//   // flex-basis: 35%;
+    @include responsive(medium) {
+      height: 26.5rem;
+    }
 
-//   // @include responsive(medium) {
-//   //   flex-basis: 25vw;
-//   //   margin-left: auto;
-//   //   border-radius: 1.25rem;
-//   // }
+    @include responsive(lg) {
+      border-radius: $border-radius;
+    }
+  }
+}
 
-//   // @include responsive(desktop) {
-//   //   // flex-basis: 22%;
-//   // }
+.keyboard-phone {
+  grid-column: 1/2;
+  grid-row: 3/4;
+  border-top-right-radius: $border-radius;
+  border-bottom-right-radius: $border-radius;
+  width: 40%;
+  background-color: $color-button-primary-normal;
 
-//   img {
-//     // height: 12.1rem;
-//     // width: 100%;
-//     // object-fit: cover;
-//     // opacity: 0.75;
-//     // mix-blend-mode: multiply;
-//     // border-top-right-radius: 1.25rem;
-//     // border-bottom-right-radius: 1.25rem;
+  @include responsive(small) {
+    width: 85%;
+  }
 
-//     // @include responsive(medium) {
-//     //   border-radius: 1.25rem;
-//     //   height: 320px;
-//     // }
+  @include responsive(medium) {
+    grid-column: 1/3;
+    grid-row: 2/3;
+    height: 20rem;
+    border-radius: 1.5rem;
+    width: 70%;
+    margin-left: 1.5rem;
+  }
 
-//     // @include responsive(desktop) {
-//     //   height: 30rem;
-//     // }
-//   }
-// }
+  @include responsive(lg) {
+    grid-column: 1/2;
+    height: 30rem;
+    width: 85%;
+    margin-left: 5rem;
+  }
 
-// .keyboard-glass {
-//   // flex-basis: 62%;
+  @include responsive(xl) {
+    width: 80%;
+    margin-left: 10.3rem;
+  }
 
-//   // @include responsive(medium) {
-//   //   flex-basis: 60vw;
-//   //   margin-right: auto;
-//   // }
+  img {
+    @include imgSizing;
+    height: 12rem;
+    border-top-right-radius: $border-radius;
+    border-bottom-right-radius: $border-radius;
+    opacity: 0.75;
+    mix-blend-mode: multiply;
 
-//   // @include responsive(desktop) {
-//   //   flex-basis: 40%;
-//   // }
+    @include responsive(medium) {
+      height: 20rem;
+      border-radius: 1.5rem;
+    }
 
-//   img {
-//     height: 12.1rem;
-//     width: 100%;
-//     object-fit: cover;
-//     border-radius: 1.25rem;
+    @include responsive(lg) {
+      height: 30rem;
+    }
+  }
+}
 
-//     @include responsive(medium) {
-//       border-radius: 1.25rem;
-//       height: 320px;
-//     }
-//     @include responsive(desktop) {
-//       height: 30rem;
-//     }
-//   }
-// }
+.keyboard-glass {
+  grid-column: 1/3;
+  grid-row: 3/4;
+  border-radius: $border-radius;
+  justify-self: end;
+  width: 65%;
+  margin-right: 1.5rem;
+
+  @include responsive(medium) {
+    grid-column: 2/4;
+    grid-row: 2/3;
+    height: 20rem;
+    border-radius: 1.5rem;
+    width: 75%;
+  }
+
+  @include responsive(lg) {
+    grid-column: 2/4;
+    height: 30rem;
+    width: 85%;
+  }
+
+  @include responsive(xl) {
+    grid-column: 2/4;
+    width: 78%;
+    margin-right: 5rem;
+  }
+
+  img {
+    @include imgSizing;
+    height: 12rem;
+    border-radius: $border-radius;
+
+    @include responsive(medium) {
+      height: 20rem;
+    }
+
+    @include responsive(lg) {
+      height: 30rem;
+    }
+  }
+}
