--- a/src/scss/blocks/_main-content.scss
+++ b/src/scss/blocks/_main-content.scss
@@ -2,83 +2,18 @@
 @use '../utilities/variables' as *;
 
 .main-content {
-  position: relative;
-  // margin-bottom: $margin-xlg;
-  // display: flex;
-  // flex-direction: row;
-  // flex-wrap: wrap;
-  // gap: 1rem;
+  grid-column: 1/2;
+  grid-row: 2/3;
+  display: grid;
+  grid-template-columns: 0.5fr 1fr;
+  grid-template-rows: auto;
+  gap: 1rem;
 
-  // @include responsive(desktop) {
-  //   justify-content: space-between;
-  // }
+  @include responsive(medium) {
+    grid-template-columns: 0.5fr 0.5fr 1fr;
+  }
 
-  .wrapper {
-    // outline: tomato solid 2px;
-
-    margin-bottom: 3rem;
-
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, auto);
-    align-self: start;
-    justify-items: start;
-    // @include centre;
-
-    // @include responsive(medium) {
-    //   flex-basis: 42vw;
-    //   align-self: center;
-    // }
-
-    // @include responsive(desktop) {
-    //   flex-basis: 55%;
-    // }
-
-    h1 {
-      grid-column: 1/3;
-      grid-row: 1/2;
-      font-weight: 900;
-      line-height: 1;
-      text-transform: uppercase;
-      margin-bottom: $margin-paragraph-sm;
-    }
-
-    p {
-      grid-column: 1/3;
-      grid-row: 2/3;
-      font-weight: 500;
-      line-height: 1.6;
-      color: $color-text;
-      margin-bottom: $margin-paragraph-sm;
-    }
-
-    .order-link-body {
-      grid-column: 1/2;
-      grid-row: 3/4;
-      @include orderButton;
-      background-color: $color-button-primary-normal;
-      color: $color-light;
-
-      &:hover,
-      &:active {
-        background-color: $color-button-primary-hover;
-        color: $color-light;
-      }
-
-      &:focus {
-        @include orderButtonFocus;
-        box-shadow: 0 0 0 2px $color-button-primary-hover;
-      }
-    }
-
-    span {
-      grid-column: 2/3;
-      align-self: center;
-      justify-self: end;
-
-      font-weight: 700;
-      color: $color-text;
-      text-transform: uppercase;
-    }
+  @include responsive(lg) {
+    grid-template-columns: repeat(4, 1fr);
   }
 }
