--- a/src/scss/blocks/_product-description.scss
+++ b/src/scss/blocks/_product-description.scss
@@ -2,24 +2,39 @@
 @use '../utilities/variables' as *;
 
 .product-description {
-  // outline: sandybrown 2px solid;
+  grid-column: 1/3;
   text-align: center;
-  // width: clamp(21rem, 85vw, 70rem);
-  // margin-top: 4.7rem;
-  // margin-bottom: 6.9rem;
-  // @include centre;
+  margin-top: 4.7rem;
+  margin-bottom: 7rem;
+  @include mobileMargins;
 
-  // @include responsive(medium) {
-  //   text-align: left;
-  //   display: flex;
-  //   justify-content: space-between;
-  // }
+  @include responsive(medium) {
+    grid-column: 1/4;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1.2rem;
+    text-align: left;
+    max-width: 80%;
+  }
 
-  // @include responsive(desktop) {
-  //   flex-basis: 30%;
-  //   flex-direction: column;
-  //   margin-left: 5%;
-  // }
+  @include responsive(lg) {
+    grid-column: 4/5;
+    grid-row: 2/3;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    height: 30rem;
+    gap: 0;
+    margin-top: 0;
+    margin-right: 5rem;
+  }
+
+  @include responsive(xl) {
+    justify-content: center;
+    margin-right: 10.3rem;
+    max-width: 16rem;
+  }
 
   h2 {
     text-transform: uppercase;
